--- a/WSViajes/WSViajes/Web.config
+++ b/WSViajes/WSViajes/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <configSections>
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
     <add key="JWT_SECRET_KEY" value="WS_VIAJES_REDDAM_MEDM_2019" />
@@ -22,7 +22,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
+    <compilation debug="true" targetFramework="4.7.2">
+      <assemblies>
+        <add assembly="System.Numerics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.7.2" />
     <customErrors mode="Off" />
   </system.web>
@@ -77,7 +81,6 @@
   <connectionStrings>
     <!--LOCAL-->
     <add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-QEP04AU\SQLEXPRESS;initial catalog=Viajes;persist security info=True;user id=sa;password=Mario690;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-
     <!--HOST-->
     <!--
      <add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;Server=sql2016;initial catalog=w1091803_Viajes;persist security info=True;user id=w1091803_usr_viajes;password=Mario690;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
