--- a/WSViajes/WSViajes/packages.config
+++ b/WSViajes/WSViajes/packages.config
@@ -32,6 +32,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.6.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Openpay" version="1.0.25" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.6.0" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net472" />
