--- a/WSViajes/WSViajes/Web.config
+++ b/WSViajes/WSViajes/Web.config
@@ -16,6 +16,11 @@
     <add key="SERVER_KEY_FIREBASE" value="AIzaSyBYB9A5YWsrdPK6O-ILRQ9_RfdEHzif7no" />
     <add key="SENDER_ID_FIREBASE" value="527950934448" />
     <add key="URI_APP_ANDROID" value="https://play.google.com/store/apps/details?id=mx.reddam.rdcliente" />
+    <add key="SMTP_SERVER" value="mail.fastrun.mx" />
+    <add key="SMTP_SERVER_PORT" value="587" />
+    <add key="SMTP_SERVER_USE_SSL" value="false" />
+    <add key="SMTP_USER" value="contacto@fastrun.mx" />
+    <add key="SMTP_PWD" value="K/83Cbb9rF" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
