--- a/WSViajes/Viajes.EL/Viajes.EL.csproj
+++ b/WSViajes/Viajes.EL/Viajes.EL.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Enum\Errores.cs" />
     <Compile Include="Extras\E_ACCESO_PERSONA.cs" />
+    <Compile Include="Extras\E_BANNER.cs" />
     <Compile Include="Extras\E_COORDENADAS_CONDUCTOR.cs" />
     <Compile Include="Extras\E_COSTO.cs" />
     <Compile Include="Extras\E_DETALLE_PEDIDO.cs" />
