--- a/WSViajes/WSViajes/packages.config
+++ b/WSViajes/WSViajes/packages.config
@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net472" />
-  <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
-  <package id="FirebaseAdmin" version="1.9.0" targetFramework="net472" />
-  <package id="Google.Api.Gax" version="2.7.0" targetFramework="net472" />
-  <package id="Google.Api.Gax.Rest" version="2.7.0" targetFramework="net472" />
-  <package id="Google.Apis" version="1.40.0" targetFramework="net472" />
-  <package id="Google.Apis.Auth" version="1.40.0" targetFramework="net472" />
-  <package id="Google.Apis.Core" version="1.40.0" targetFramework="net472" />
-  <package id="jQuery" version="1.10.2" targetFramework="net472" />
-  <package id="jQuery.Validation" version="1.11.1" targetFramework="net472" />
+  <package id="bootstrap" version="4.4.1" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
+  <package id="FirebaseAdmin" version="1.9.2" targetFramework="net472" />
+  <package id="Google.Api.Gax" version="3.0.0" targetFramework="net472" />
+  <package id="Google.Api.Gax.Rest" version="3.0.0" targetFramework="net472" />
+  <package id="Google.Apis" version="1.44.1" targetFramework="net472" />
+  <package id="Google.Apis.Auth" version="1.44.1" targetFramework="net472" />
+  <package id="Google.Apis.Core" version="1.44.1" targetFramework="net472" />
+  <package id="jQuery" version="3.0.0" targetFramework="net472" />
+  <package id="jQuery.Validation" version="1.19.1" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net472" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net472" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
@@ -24,21 +24,25 @@
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost.es" version="5.2.7" targetFramework="net472" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.5.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Logging" version="5.5.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.5.0" targetFramework="net472" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.5.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.5.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.5.0" targetFramework="net472" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
-  <package id="Modernizr" version="2.6.2" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Openpay" version="1.0.25" targetFramework="net472" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
-  <package id="System.Collections.Immutable" version="1.6.0" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net472" />
-  <package id="System.Interactive.Async" version="3.2.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net472" />
+  <package id="popper.js" version="1.16.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.7.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.5.0" targetFramework="net472" />
+  <package id="System.Interactive.Async" version="4.0.0" targetFramework="net472" />
+  <package id="System.Linq.Async" version="4.0.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
