--- a/WSViajes/WSViajes/Web.config
+++ b/WSViajes/WSViajes/Web.config
@@ -21,10 +21,10 @@
     <add key="SMTP_SERVER_USE_SSL" value="false" />
     <add key="SMTP_USER" value="contacto@fastrun.mx" />
     <add key="SMTP_PWD" value="K/83Cbb9rF" />
+    <add key="SMTP_PWD" value="K/83Cbb9rF" />
     <add key="OPNPY_KEY" value="sk_a896b738bdc541a599e75c52df080bb4" />
     <add key="OPNPY_MERCHANT" value="mes0ipoqxgvxnuyu4kpg" />
     <add key="OPNPY_PROD" value="false" />
-    <add key="SMTP_PWD" value="K/83Cbb9rF" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -89,10 +89,11 @@
   </runtime>
   <connectionStrings>
     <!--LOCAL-->
-     <!--<add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-QEP04AU\SQLEXPRESS;initial catalog=Viajes;persist security info=True;user id=sa;password=Mario690;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-        -->
+     <add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-QEP04AU\SQLEXPRESS;initial catalog=Viajes;persist security info=True;user id=sa;password=Mario690;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
     <!--LOCAL MAC-->
-    <add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Viajes;persist security info=True;user id=sa;password=reallyStrongPwd123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Viajes;persist security info=True;user id=sa;password=reallyStrongPwd123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    -->
     <!--HOST-->
     <!--
      <add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;Server=sql2016;initial catalog=w1091803_Viajes;persist security info=True;user id=w1091803_usr_viajes;password=Mario690;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
