--- a/WSViajes/WSViajes/WSViajes.csproj
+++ b/WSViajes/WSViajes/WSViajes.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Handlers\TokenValidationHandler.cs" />
     <Compile Include="Models\Login.cs" />
     <Compile Include="Models\Request\ActualizaTokenRequest.cs" />
+    <Compile Include="Models\Request\CreaTarjetaOpenPayRequest.cs" />
     <Compile Include="Models\Request\EnviaNotificacionRequest.cs" />
     <Compile Include="Models\Request\InsertaActualizaDireccionRequest.cs" />
     <Compile Include="Models\Request\InsertaActualizaLocalRequest.cs" />
