--- a/WSViajes/Viajes.EL/Viajes.EL.csproj
+++ b/WSViajes/Viajes.EL/Viajes.EL.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Extras\E_TIPO_LOCAL.cs" />
     <Compile Include="Interfaz\ICRUD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Extras\E_PRODUCTO_DETALLE.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
