--- a/WSViajes/Viajes.EL/Viajes.EL.csproj
+++ b/WSViajes/Viajes.EL/Viajes.EL.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Extras\E_PERSONA.cs" />
     <Compile Include="Extras\E_PREGUNTA_SERVICIO.cs" />
     <Compile Include="Extras\E_PRODUCTO.cs" />
+    <Compile Include="Extras\E_PRODUCTO_BUSQUEDA.cs" />
     <Compile Include="Extras\E_QR_TIENDA.cs" />
     <Compile Include="Extras\E_TIPO_LOCAL.cs" />
     <Compile Include="Interfaz\ICRUD.cs" />
