--- a/WSViajes/Viajes.DAL/Viajes.DAL.csproj
+++ b/WSViajes/Viajes.DAL/Viajes.DAL.csproj
@@ -113,6 +113,9 @@
     <Compile Include="Modelo\M_DETALLE_PEDIDO.cs">
       <DependentUpon>ModeloViajes.tt</DependentUpon>
     </Compile>
+    <Compile Include="Modelo\M_DETALLE_PEDIDO_PERSONALIZADO.cs">
+      <DependentUpon>ModeloViajes.tt</DependentUpon>
+    </Compile>
     <Compile Include="Modelo\M_PEDIDO.cs">
       <DependentUpon>ModeloViajes.tt</DependentUpon>
     </Compile>
@@ -147,6 +150,7 @@
       <DependentUpon>ModeloViajes.tt</DependentUpon>
     </Compile>
     <Compile Include="Pedido\DetallePedidoOperaciones.cs" />
+    <Compile Include="Pedido\DetallePedidoPersonalizadoOperaciones.cs" />
     <Compile Include="Pedido\EstatusOperaciones.cs" />
     <Compile Include="Pedido\PedidoOperaciones.cs" />
     <Compile Include="Persona\AccesoOperaciones.cs" />
