--- a/WSViajes/WSViajes/Web.config
+++ b/WSViajes/WSViajes/Web.config
@@ -13,8 +13,12 @@
     <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:51157" />
     <add key="JWT_ISSUER_TOKEN" value="http://localhost:51157" />
     <add key="JWT_EXPIRE_DAYS" value="100" />
-    <add key="SERVER_KEY_FIREBASE" value="AIzaSyBYB9A5YWsrdPK6O-ILRQ9_RfdEHzif7no" />
-    <add key="SENDER_ID_FIREBASE" value="527950934448" />
+    <add key="SERVER_KEY_FIREBASE_CLIENTE" value="AIzaSyBYB9A5YWsrdPK6O-ILRQ9_RfdEHzif7no" />
+    <add key="SENDER_ID_FIREBASE_CLIENTE" value="527950934448" />
+    <add key="SERVER_KEY_FIREBASE_CONDUCTOR" value="AAAARio_Zk8:APA91bElzaV1lX_fWnk5OjtmYA_7n3dtTScg7nOq9d8abKEewqo-8rqvGVe-xWdwyZgXcxBm7_BNnKPjOTIj_feeNhZAhsMw6tjDaXHNqEYpHmqyZPZDPhUp-ibA2GlVUF2VSQirn7ZN" />
+    <add key="SENDER_ID_FIREBASE_CONDUCTOR" value="301356508751" />
+    <add key="SERVER_KEY_MAPS" value="AIzaSyAx_MQ3PvBlWz1a42tCO_ZNTGK5w3EbXbY" />
+    <add key="URI_API_MAPS_DISTANCE" value="https://maps.googleapis.com/maps/api/directions/json" />
     <add key="URI_APP_ANDROID" value="https://play.google.com/store/apps/details?id=mx.reddam.rdcliente" />
     <add key="SMTP_SERVER" value="mail.fastrun.mx" />
     <add key="SMTP_SERVER_PORT" value="587" />
