--- a/WSViajes/Viajes.EL/Viajes.EL.csproj
+++ b/WSViajes/Viajes.EL/Viajes.EL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Enum\Errores.cs" />
+    <Compile Include="Enum\NotificacionFirebase.cs" />
     <Compile Include="Extras\E_ACCESO_PERSONA.cs" />
     <Compile Include="Extras\E_BANNER.cs" />
     <Compile Include="Extras\E_COORDENADAS_CONDUCTOR.cs" />
@@ -63,6 +64,8 @@
     <Compile Include="Extras\E_PRODUCTO.cs" />
     <Compile Include="Extras\E_PRODUCTO_BUSQUEDA.cs" />
     <Compile Include="Extras\E_QR_TIENDA.cs" />
+    <Compile Include="Extras\E_RESPOSE_DISTANCE.cs" />
+    <Compile Include="Extras\E_TAFIRA_ENVIO.cs" />
     <Compile Include="Extras\E_TIPO_LOCAL.cs" />
     <Compile Include="Interfaz\ICRUD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
