--- a/WSViajes/WSViajes/WSViajes.csproj
+++ b/WSViajes/WSViajes/WSViajes.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Models\Request\CreaTarjetaOpenPayRequest.cs" />
     <Compile Include="Models\Request\EnviaNotificacionRequest.cs" />
     <Compile Include="Models\Request\InsertaActualizaDireccionRequest.cs" />
+    <Compile Include="Models\Request\InsertaActualizaExtraRequest.cs" />
     <Compile Include="Models\Request\InsertaActualizaLocalRequest.cs" />
     <Compile Include="Models\Request\InsertaActualizaPedidoPersonalizadoRequest.cs" />
     <Compile Include="Models\Request\InsertaActualizaPedidoRequest.cs" />
