--- a/Administrador/package.json
+++ b/Administrador/package.json
@@ -36,7 +36,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
-    "@angular/cli": "~8.1.0",
+    "@angular/cli": "^10.0.2",
     "@angular/compiler-cli": "~8.1.0",
     "@angular/language-service": "~8.1.0",
     "@types/googlemaps": "^3.37.7",
