--- a/WSViajes/Viajes.EL/Viajes.EL.csproj
+++ b/WSViajes/Viajes.EL/Viajes.EL.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Extras\E_PRODUCTO.cs" />
     <Compile Include="Extras\E_PRODUCTO_BUSQUEDA.cs" />
     <Compile Include="Extras\E_QR_TIENDA.cs" />
+    <Compile Include="Extras\E_RECHAZO_PEDIDO.cs" />
     <Compile Include="Extras\E_RESPOSE_DISTANCE.cs" />
     <Compile Include="Extras\E_TAFIRA_ENVIO.cs" />
     <Compile Include="Extras\E_TIPO_LOCAL.cs" />
