--- a/WSViajes/WSViajes/Web.config
+++ b/WSViajes/WSViajes/Web.config
@@ -29,6 +29,7 @@
     <add key="OPNPY_KEY" value="sk_a896b738bdc541a599e75c52df080bb4" />
     <add key="OPNPY_MERCHANT" value="mes0ipoqxgvxnuyu4kpg" />
     <add key="OPNPY_PROD" value="false" />
+    <add key="URL_PASSWORD_CONDUCTOR" value="www.fastrun.mx/cambia-password/conductor/" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
