Cambio en archivos ignorados y apunta ahora a godaddy

--- a/WSViajes/WSViajes/WSViajes.csproj
+++ b/WSViajes/WSViajes/WSViajes.csproj
@@ -260,6 +260,7 @@
     <Content Include="log4net.config" />
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\GoDaddy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
