--- a/WSViajes/WSViajes/Web.config
+++ b/WSViajes/WSViajes/Web.config
@@ -94,14 +94,18 @@
   </runtime>
   <connectionStrings>
     <!--LOCAL-->
-    <add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-QEP04AU\SQLEXPRESS;initial catalog=Viajes;persist security info=True;user id=sa;password=Mario690;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-QEP04AU\SQLEXPRESS;initial catalog=Viajes;persist security info=True;user id=sa;password=Mario690;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--LOCAL MAC-->
     <!--<add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Viajes;persist security info=True;user id=sa;password=reallyStrongPwd123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     -->
-    <!--HOST-->
+    <!--HOST DON WEB-->
     <!--
      <add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;Server=sql2016;initial catalog=w1091803_Viajes;persist security info=True;user id=w1091803_usr_viajes;password=Mario690;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     -->
+  
+    <!--HOST GODADY-->
+     <add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=198.71.225.145;initial catalog=Viajes;persist security info=True;user id=usr_viajes;password=pwd_viajes;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
