--- a/Administrador/package.json
+++ b/Administrador/package.json
@@ -12,48 +12,48 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.1.0",
-    "@angular/animations": "^10.0.3",
-    "@angular/cdk": "^10.0.1",
-    "@angular/common": "~10.0.3",
-    "@angular/compiler": "~10.0.3",
-    "@angular/core": "~10.0.3",
-    "@angular/forms": "~10.0.3",
-    "@angular/material": "^10.0.1",
-    "@angular/platform-browser": "~10.0.3",
-    "@angular/platform-browser-dynamic": "~10.0.3",
-    "@angular/router": "~10.0.3",
-    "bootstrap": "^4.5.0",
+    "@angular/animations": "^10.2.4",
+    "@angular/cdk": "^10.2.7",
+    "@angular/common": "^10.0.14",
+    "@angular/compiler": "^10.0.14",
+    "@angular/core": "^10.0.14",
+    "@angular/forms": "^10.0.14",
+    "@angular/material": "^10.2.7",
+    "@angular/platform-browser": "^10.0.14",
+    "@angular/platform-browser-dynamic": "^10.0.14",
+    "@angular/router": "^10.0.14",
+    "bootstrap": "^4.6.0",
     "hammerjs": "^2.0.8",
     "ng-sidebar": "^9.4.2",
     "ngx-auto-unsubscribe": "^3.0.1",
     "ngx-loading": "^8.0.0",
-    "ngx-mat-select-search": "^3.0.1",
+    "ngx-mat-select-search": "^3.2.0",
     "ngx-material-file-input": "^2.1.1",
     "ngx-toastr": "^12.1.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "rxjs": "^6.6.3",
+    "tslib": "^2.1.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.2",
-    "@angular/cli": "^10.0.2",
-    "@angular/compiler-cli": "~10.0.3",
-    "@angular/language-service": "~10.0.3",
-    "@types/googlemaps": "^3.39.9",
-    "@types/jasmine": "~3.5.11",
+    "@angular-devkit/build-angular": "^0.1000.8",
+    "@angular/cli": "^10.2.2",
+    "@angular/compiler-cli": "^10.0.14",
+    "@angular/language-service": "^10.0.14",
+    "@types/googlemaps": "^3.43.3",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "~14.0.22",
-    "codelyzer": "^6.0.0",
+    "@types/node": "^14.0.27",
+    "codelyzer": "^6.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.2",
-    "karma": "~5.1.0",
+    "karma": "^5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~7.0.0",
     "ts-node": "~8.10.2",
-    "tslint": "~6.1.2",
-    "typescript": "~3.9.6"
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.9"
   }
 }
