Update img conductor
Se guarda la imagen de un conductor al dar de alta uno y se envía correo con url para generar pass

--- a/WSViajes/WSViajes/WSViajes.csproj
+++ b/WSViajes/WSViajes/WSViajes.csproj
@@ -222,6 +222,7 @@
     </Compile>
     <Compile Include="Handlers\TokenValidationHandler.cs" />
     <Compile Include="Models\Login.cs" />
+    <Compile Include="Models\Request\ActualizaPasswordRequest.cs" />
     <Compile Include="Models\Request\ActualizaTokenRequest.cs" />
     <Compile Include="Models\Request\CalculaCostoEntrega.cs" />
     <Compile Include="Models\Request\CreaTarjetaOpenPayRequest.cs" />
