--- a/WSViajes/WSViajes/Web.config
+++ b/WSViajes/WSViajes/Web.config
@@ -28,7 +28,7 @@
     <add key="OPNPY_KEY" value="sk_a896b738bdc541a599e75c52df080bb4" />
     <add key="OPNPY_MERCHANT" value="mes0ipoqxgvxnuyu4kpg" />
     <add key="OPNPY_PROD" value="false" />
-    <add key="URL_PASSWORD_CONDUCTOR" value="cambia-password/conductor/" />
+    <add key="URL_CAMBIO_PASSWORD" value="cambia-password/" />
     <add key="URL_FRONT" value="http://fastrun.reddam.mx/#/" />
     <add key="URL_LOGO" value="http://fastrun.reddam.mx/assets/img/logo.png" />
     <add key="webpages:Version" value="3.0.0.0" />
