Se agrega edición y consulta de usuarios

--- a/WSViajes/WSViajes/WSViajes.csproj
+++ b/WSViajes/WSViajes/WSViajes.csproj
@@ -328,6 +328,7 @@
     </Compile>
     <Compile Include="Handlers\TokenValidationHandler.cs" />
     <Compile Include="Models\Login.cs" />
+    <Compile Include="Models\Request\ActualizaEstatusRegistroRequest.cs" />
     <Compile Include="Models\Request\ActualizaPasswordRequest.cs" />
     <Compile Include="Models\Request\ActualizaTokenRequest.cs" />
     <Compile Include="Models\Request\CalculaCostoEntrega.cs" />
