--- a/WSViajes/WSViajes/Web.config
+++ b/WSViajes/WSViajes/Web.config
@@ -133,7 +133,7 @@
   </runtime>
   <connectionStrings>
     <!--LOCAL-->
-    <add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-QEP04AU\SQLEXPRESS;initial catalog=Viajes;persist security info=True;user id=sa;password=Mario690;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-G6QUPO2\SQLEXPRESS;initial catalog=Viajes;persist security info=True;user id=sa;password=Mario690;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--LOCAL MAC-->
     <!--<add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Viajes;persist security info=True;user id=sa;password=reallyStrongPwd123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     -->
