--- a/Administrador/package.json
+++ b/Administrador/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^10.0.14",
     "@angular/router": "^10.0.14",
     "bootstrap": "^4.6.0",
+    "dateformat": "^4.5.1",
     "hammerjs": "^2.0.8",
     "ng-sidebar": "^9.4.2",
     "ngx-auto-unsubscribe": "^3.0.1",
