--- a/WSViajes/Viajes.EL/Viajes.EL.csproj
+++ b/WSViajes/Viajes.EL/Viajes.EL.csproj
@@ -54,6 +54,9 @@
     <Compile Include="Extras\E_DIRECCION.cs" />
     <Compile Include="Extras\E_ESTATUS_PEDIDO.cs" />
     <Compile Include="Extras\E_EXTRAS_PRODUCTO.cs" />
+    <Compile Include="Extras\E_FILTROS_REPORTE.cs" />
+    <Compile Include="Extras\E_FILTROS_REPORTE_GANANCIAS.cs" />
+    <Compile Include="Extras\E_LISTA_PAGINADA.cs" />
     <Compile Include="Extras\E_LOCAL.cs" />
     <Compile Include="Extras\E_LOGIN.cs" />
     <Compile Include="Extras\E_MENSAJE.cs" />
@@ -68,6 +71,7 @@
     <Compile Include="Extras\E_QR_TIENDA.cs" />
     <Compile Include="Extras\E_RECHAZO_PEDIDO.cs" />
     <Compile Include="Extras\E_RESPOSE_DISTANCE.cs" />
+    <Compile Include="Extras\E_RPT_GANANCIAS.cs" />
     <Compile Include="Extras\E_TAFIRA_ENVIO.cs" />
     <Compile Include="Extras\E_TIPO_LOCAL.cs" />
     <Compile Include="Interfaz\ICRUD.cs" />
