--- a/WSViajes/WSViajes/WSViajes.csproj
+++ b/WSViajes/WSViajes/WSViajes.csproj
@@ -48,6 +48,9 @@
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="AutoMapper, Version=10.0.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.10.1.1\lib\net461\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
     </Reference>
@@ -293,9 +296,6 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="AutoMapper">
-      <HintPath>..\packages\AutoMapper.9.0.0\lib\net461\AutoMapper.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
@@ -320,6 +320,7 @@
     <Compile Include="Controllers\PersonaController.cs" />
     <Compile Include="Controllers\ProductoController.cs" />
     <Compile Include="Controllers\QRController.cs" />
+    <Compile Include="Controllers\ReportesController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Exceptions\ServiceException.cs" />
@@ -327,6 +328,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Handlers\TokenValidationHandler.cs" />
+    <Compile Include="Models\FiltrosReporte.cs" />
     <Compile Include="Models\Login.cs" />
     <Compile Include="Models\Request\ActualizaEstatusRegistroRequest.cs" />
     <Compile Include="Models\Request\ActualizaPasswordRequest.cs" />
@@ -334,6 +336,7 @@
     <Compile Include="Models\Request\CalculaCostoEntrega.cs" />
     <Compile Include="Models\Request\CreaTarjetaOpenPayRequest.cs" />
     <Compile Include="Models\Request\EnviaNotificacionRequest.cs" />
+    <Compile Include="Models\Request\FiltrosReporteGanancias.cs" />
     <Compile Include="Models\Request\InsertaActualizaBannerRequest.cs" />
     <Compile Include="Models\Request\InsertaActualizaConductorRequest.cs" />
     <Compile Include="Models\Request\InsertaActualizaDireccionRequest.cs" />
@@ -381,6 +384,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Assets\Img\" />
+    <Folder Include="Views\Reportes\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Viajes.BL\Viajes.BL.csproj">
