--- a/WSViajes/WSViajes/WSViajes.csproj
+++ b/WSViajes/WSViajes/WSViajes.csproj
@@ -337,6 +337,7 @@
     <Compile Include="Models\Request\CreaTarjetaOpenPayRequest.cs" />
     <Compile Include="Models\Request\EnviaNotificacionRequest.cs" />
     <Compile Include="Models\Request\FiltrosReporteGanancias.cs" />
+    <Compile Include="Models\Request\FiltrosReporteGeneral.cs" />
     <Compile Include="Models\Request\InsertaActualizaBannerRequest.cs" />
     <Compile Include="Models\Request\InsertaActualizaConductorRequest.cs" />
     <Compile Include="Models\Request\InsertaActualizaDireccionRequest.cs" />
